--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "dependencies": {
-    "axios": "^1.8.4",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "pexels": "^1.4.0"
+  "name": "tarotmystic",
+  "version": "1.0.0",
+  "description": "",
+  "main": "client/src/app.js",
+  "type": "module", 
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module"
+  "keywords": [],
+  "author": "yanaesher",
+  "license": "ISC"
 }
