--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "client/src/app.js",
-  "type": "module", 
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write .",
+    "start": "live-server client"
   },
   "keywords": [],
   "author": "yanaesher",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "live-server": "^1.2.2",
+    "prettier": "^3.5.3"
+  }
 }
